# cyberpunk2077-input-loader

./: .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json  compile_flags.txt  inputContexts.xml  inputUserMappings.xml  input_loader.code-workspace  input_loader.ini  readme.md  readme.txt  requirements.md
.github/workflows/: build.yaml
cmake/: FindPugixml.cmake  FindRED4ext.SDK.cmake  FindSpdlog.cmake
include/: InputLoader.hpp
include/InputLoader/: MergeModDocument.hpp
src/: Main.cpp  Utils.cpp  input_loader.sln  input_loader.vcxproj  input_loader.vcxproj.filters  stdafx.hpp
tools/: install.bat
